finalizei 2 sections do main

--- a/index.html
+++ b/index.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bandeiras</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bandeiras</title>
+  <link rel="stylesheet" href="flex.css">
 </head>
+
 <body>
-    <header>
-        <h3>06/03/2024</h3>
-        <img src="imagens/logoHeader.jpg" alt="Nada">
-    </header>
-    <main>
-      <section>
-          <h1 id=>Bandeiras</h1>
-          <ul>
-            <li><img src="imagens/espanha.png" alt=""></li>
-            <li><img src="imagens/irlanda.png" alt=""></li>
-            <li><img src="imagens/islandia.png" alt=""></li>
-            <li><img src="imagens/suecia.png" alt=""></li>
-          </ul>
-          </section>
+  <header class="header">
+    <img src="imagens/logoHeader.jpg" alt="Nada">
+    <h3>06/03/2024</h3>
+  </header>
+  <main>
+    <section id="flag-container">
+      <h1>Bandeiras</h1>
 
-
-
-      <section>
-      <h1>A bandeira mais bonita</h1>
-          <div>
-              <p>
-                  A Irlanda é uma ilha encantadora localizada no noroeste da Europa, conhecida por suas paisagens deslumbrantes, que variam de campos verdejantes a falésias dramáticas. Sua rica história e cultura celta atraem visitantes de todo o mundo. Além disso, o povo irlandês é conhecido por sua hospitalidade calorosa e seu amor pela música e pela dança tradicionais. Experimentar a Irlanda é mergulhar em uma mistura única de tradição, natureza e charme contemporâneo.
-              </p>
-              <img src="imagens/irlanda.png" alt="">
-          </div>
-      </section>
-      <section>
-        <ul>
-          <li>Irlanda
-            <img src="imagens/irlanda.png" alt="">
-          </li>
-          <li>Islandia
-            <img src="imagens/islandia.png" alt="">
-          </li>
-          <li>Espanha
-            <img src="imagens/espanha.png" alt="">
-          </li>
-          <li>Suécia
-            <img src="imagens/suecia.png" alt="">
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <div>
-        <img src="imagens/Instagram_logo_2022.png" alt="">
-        <p>@Donadoni_g</p>
+      <div class="flag-list">
+        <div>
+           <img class="flag" src="imagens/espanha.png" alt="">
+           <img class="flag" src="imagens/irlanda.png" alt="">
+        </div>
+        <div>
+           <img class="flag" src="imagens/islandia.png" alt="">
+           <img class="flag" src="imagens/suecia.png" alt="">
+        </div>
       </div>
-    </footer>
+    </section>
+    <section id="container">
+      <h1>A bandeira mais bonita</h1>
+      <div id="flag-irlanda">
+        <p>
+          A Irlanda é uma ilha encantadora localizada no noroeste da Europa, conhecida por suas paisagens deslumbrantes,
+          que variam de campos verdejantes a falésias dramáticas. Sua rica história e cultura celta atraem visitantes de
+          todo o mundo. Além disso, o povo irlandês é conhecido por sua hospitalidade calorosa e seu amor pela música e
+          pela dança tradicionais. Experimentar a Irlanda é mergulhar em uma mistura única de tradição, natureza e
+          charme contemporâneo.
+        </p>
+        <img src="imagens/irlanda.png" alt="">
+      </div>
+    </section>
+    <section>
+      <ul>
+        <li>Irlanda
+          <img src="imagens/irlanda.png" alt="">
+        </li>
+        <li>Islandia
+          <img src="imagens/islandia.png" alt="">
+        </li>
+        <li>Espanha
+          <img src="imagens/espanha.png" alt="">
+        </li>
+        <li>Suécia
+          <img src="imagens/suecia.png" alt="">
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <div>
+      <img src="imagens/Instagram_logo_2022.png" alt="">
+      <p>@Donadoni_g</p>
+    </div>
+  </footer>
 
 </body>
+
 </html>
